--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
-{ "homepage":"http://sita-vankayalapati.github.io/zolve-assignment.git",
+{
+  "homepage": "http://sita-vankayalapati.github.io/zolve-assignment.git",
   "name": "zolve",
   "version": "0.1.0",
   "private": true,
@@ -6,15 +7,20 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.23.0",
+    "chart.js": "^3.5.1",
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
+    "react-chartjs-2": "^3.0.5",
+    "react-charts": "^2.0.0-beta.7",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
-  "scripts": { 
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
+  "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
